--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <body>
         <div class="app">
 
-            <div class="background_main">
+            <section class="background_main">
                 <!--background-image url (to see style.css)-->
-                <div class="bottom_white_band"></div>
-            </div>
-
-            <div class="main_content">
-                <div class="yellow_square"></div>
-                <div class="main_content_txt">
-                    <h1>nature calling</h1>
-                    <h3>silence and freedom.</h3>
+                <div class="block">
+                    <div class="yellow_square"></div>
+                    <div class="main_content_txt">
+                        <h1>nature calling</h1>
+                        <h3>silence and freedom.</h3>
+                    </div>
                 </div>
-            </div>
+            </section>
 
+            <div class="bottom_white_band"></div>
             <footer class="footer">
                 <a href="#">
                     <span>Template</span>
